--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://xeqin.github.io/">
+    <meta http-equiv="refresh" content="0;url=https://sazxe.website/">
     <title>REDIRECT</title>
 </head>
 <body>
 </body>
 </html>
+
