--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://sazxe.website/">
+    <meta http-equiv="refresh" content="0;url=https://nightorder.github.io/">
     <title>REDIRECT</title>
 </head>
 <body>
 </body>
 </html>
+
 
